# aie-group-3

./: .gitignore  README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: README.md
homeworks/HW03/eda-cli/reports_example/: report.md
homeworks/HW03/eda-cli/src/eda_cli/: cli.py
homeworks/HW03/eda-cli/tests/: test_core.py
homeworks/HW04/eda-cli/: README.md  pyproject.toml
homeworks/HW04/eda-cli/reports/: report.md
homeworks/HW04/eda-cli/src/eda_cli/: api.py  cli.py  core.py
homeworks/HW05/: HW05.ipynb  report.txt
homeworks/HW05/artifacts/: results_summary.json
homeworks/HW06/: HW06.ipynb  S06-hw-dataset-02.csv  report.md
homeworks/HW06/artifacts/: best_model.joblib  best_model_meta.json  feature_importances_permutation.csv  metrics_test.json  search_summaries.json
homeworks/HW07/: HW07.ipynb  Untitled.ipynb  report.md
homeworks/HW07/artifacts/: best_configs.json  metrics_summary.json
homeworks/HW07/artifacts/labels/: labels_hw07_ds1.csv  labels_hw07_ds2.csv  labels_hw07_ds4.csv
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW08-09/artifacts/: best_config.json  best_model.pt  runs.csv
homeworks/HW10-11/: HW10-11.ipynb  report.md
homeworks/HW10-11/artifacts/: best_classifier_config.json  history_C1.csv  history_C2.csv  history_C3.csv  history_C4.csv  runs.csv
homeworks/HW12/: HW12.ipynb  report.md
homeworks/HW12/artifacts/: best_gru.pt  best_gru_config.json  runs.csv
